[package]
name = "rotor-dns"
description = """
    Asynchronous DNS resolver for rotor framework
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["rotor", "DNS", "domain", "name", "async"]
homepage = "http://github.com/tailhook/rotor-dns"
documentation = "http://tailhook.github.com/rotor-dns/"
version = "0.2.0"
authors = ["paul@colomiets.name"]

[dependencies]
rand = "0.3.13"
rotor = {git="git://github.com/tailhook/rotor", rev="08946ce"}
ip = "1.0.0"
quick-error = "0.2.2"
dns-parser = "0.3.0"
resolv-conf = "0.3.0"

[dev-dependencies]
argparse = "0.2.1"
rotor-tools = {git="git://github.com/tailhook/rotor-tools", rev="9710c96"}

[lib]
name = "rotor_dns"
path = "src/lib.rs"

