[package]
name = "rotor-dns"
description = """
    Asynchronous DNS resolver for rotor framework
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["rotor", "DNS", "domain", "name", "async"]
homepage = "http://github.com/tailhook/rotor-dns"
documentation = "http://tailhook.github.com/rotor-dns/"
version = "0.4.0"
authors = ["paul@colomiets.name"]

[dependencies]
rand = "0.3.13"
rotor = "0.6.1"
quick-error = "1.0.0"
dns-parser = "0.3.1"
resolv-conf = "0.4.0"

[dev-dependencies]
argparse = "0.2.1"
rotor-tools = "0.3.1"

[lib]
name = "rotor_dns"
path = "src/lib.rs"

